[package]
name = "unf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
arrow = { version = "5.3", default-features = false, features = ["csv"] }
base64 = "0.13.0"
clap = "2.33.3"
md-5 = "0.9.1"
num = "0.4.0"
num-traits = "0.2.14"